--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,70 @@
-Django~=3.1.1
+aniso8601==8.1.0
+asgiref==3.3.1
+astroid==2.4.2
+attrs==19.3.0
+autopep8==1.5.5
+beautifulsoup4==4.9.1
+bootstrap4==0.1.0
+bs4==0.0.1
+certifi==2020.12.5
+cffi==1.14.2
+chardet==3.0.4
+click==7.1.2
+cobble==0.1.3
+colorama==0.4.4
+cryptography==3.0
+dj-database-url==0.5.0
+Django==3.1.5
+django-bootstrap==0.2.4
+django-bootstrap4==2.2.0
+django-crispy-forms==1.9.2
+django-debug-toolbar==3.2
+django-heroku==0.3.1
+django-phone-field==1.8.1
+django-taggit==1.3.0
+django-widget-tweaks==1.4.8
+djangorestframework==3.11.1
+Flask==1.1.2
+Flask-RESTful==0.3.8
+idna==2.10
+isort==5.6.4
+itsdangerous==1.1.0
+jellyfish==0.8.2
+Jinja2==2.11.2
+joblib==1.0.1
+lazy-object-proxy==1.4.3
+lib50==2.0.8
+mammoth==1.4.10
+Markdown==3.3.4
+MarkupSafe==1.1.1
+mccabe==0.6.1
+nltk==3.5
+numpy==1.20.1
+pexpect==4.8.0
+Pillow==7.2.0
+psycopg2==2.8.6
+ptyprocess==0.6.0
+pycodestyle==2.6.0
+pycparser==2.20
+pygame==2.0.0.dev4
+pylint==2.6.0
+pyperclip==1.8.2
+pytz==2021.1
+PyYAML==5.3.1
+regex==2020.11.13
+requests==2.24.0
+scikit-learn==0.24.1
+scipy==1.6.1
+six==1.15.0
+sklearn==0.0
+soupsieve==2.1
+sqlparse==0.4.1
+submit50==3.0.2
+termcolor==1.1.0
+threadpoolctl==2.1.0
+toml==0.10.2
+tqdm==4.59.0
+urllib3==1.25.10
+Werkzeug==1.0.1
+whitenoise==5.2.0
+wrapt==1.12.1
